tests/correctness/reject/parse_missing_colon.keel
def main(sys: System); Io
    println("no colon after header")
